Minor fixes on element spacing

--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -128,11 +128,15 @@ p.title {
   font-family: var(--font-secondary);
 }
 
-p.lg {
+.xl {
   font-size: 1.5rem;
 }
 
-p.sm {
+.lg {
+  font-size: 1.25rem;
+}
+
+.sm {
   font-size: 0.875rem;
 }
 
